<resources>
    <string name="app_name">Food-Delivery</string>

    <string name="food_for_ev">Food for \nEveryone</string>
    <string name="start_text_get_started">Get started</string>
    <string name="phone_hint">Phone</string>
    <string name="password_hint">Password</string>
    <string name="forgot_passcode">Forgot passcode?</string>
    <string name="text_login_screen">Login</string>
    <string name="login_in_to_your_account">Login in to your account</string>
    <string name="create_an_account">Create an account</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="login_tabLayout">Login</string>
    <string name="sign_up_tabLayout">Sign-up</string>
    <string name="delicious_f">Delicious\nfood for you</string>
    <string name="text_home_bottom_navigation">Home</string>
    <string name="text_search_bottom_navigation">Search</string>
    <string name="text_my_cart_bottom_navigation">My Cart</string>
    <string name="text_profile_bottom_navigation">Profile</string>
    <string name="veggie_t">Veggie\ntomato mix</string>
    <string name="n1_900">N1,900</string>
    <string name="foods">Foods</string>
    <string name="veggie_tomato_mix">Veggie tomato mix</string>
    <string name="food_info_price_n1_900">N1,900</string>
    <string name="text_food_info_screen_delivery_info">Delivery info</string>
    <string name="food_info_text_delivery_info">Delivery between monday aug and thursday 20 from 8pm to 91:32 pm</string>
    <string name="text_food_info_screen_return_policy_title">Return policy</string>
    <string name="food_info_return_policy_text">All our foods are double checked before leaving our stores so by any case you found a broken food please contact our hotline immediately.</string>
    <string name="food_inf_add_to_cart">Add to cart</string>
    <string name="see_more">see more</string>
    <string name="fish_with_mix_orange">Fish with mix orange</string>
    <string name="_1_900">#1,900</string>
    <string name="_1">1</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="swipe_on_an_item_to_delete">swipe on an item to delete</string>
    <string name="text_cart_page_complete_order">Complete order</string>
    <string name="text_personal_details">Personal details</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="try_searching_the_item_with_na_different_keyword">Try searching the item with\na different keyword.</string>
    <string name="item_not_found">Item not found</string>
    <string name="no_card_yet">No card yet</string>
    <string name="hit_the_orange_button_down_nbelow_to_create_an_order">Hit the orange button down\nbelow to Create an order</string>
    <string name="start_ordering">Start ordering</string>
    <string name="you_don_t_have_any_cart">You don\'t have any cart</string>
    <string name="personal_details">Personal details</string>
    <string name="change">change</string>
</resources>