<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/page_sign_in_input_phone_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_login_screen_call"
        android:drawablePadding="16sp"
        android:fontFamily="@font/sf_pro_text"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:maxLength="13"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/page_sign_in_input_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:drawableStart="@drawable/ic_login_screen_lock"
        android:drawablePadding="16sp"
        android:fontFamily="@font/sf_pro_text"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_sign_in_forgot_passcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_text"
        android:padding="8dp"
        android:text="@string/forgot_passcode"
        android:textColor="#FA4A0C"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/page_sign_in_input_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/page_sign_in_login_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="#FA4A0C"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/text_login_screen"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@id/page_sign_in_line_92_percent"
        app:layout_constraintTop_toTopOf="@id/page_sign_in_line_92_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/page_sign_in_line_92_percent"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />


</androidx.constraintlayout.widget.ConstraintLayout>