<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F8"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:fontFamily="@font/sf_pro_text"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/personalDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_text"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/size_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="#FA4A0C"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/personalDetails"
        app:layout_constraintBottom_toBottomOf="@id/personalDetails"
        android:layout_marginEnd="@dimen/size_24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_250dp"
        app:layout_constraintTop_toBottomOf="@id/change"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="@dimen/size_16dp"
        app:cardCornerRadius="16dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>