<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F8">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/page_search_view"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:background="@drawable/search_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:queryBackground="@null"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_search_title"
        app:queryHint="Search" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/page_search_icon_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_for_search_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_search_item_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_16sp"
        android:fontFamily="@font/sf_pro_text"
        android:gravity="center"
        android:text="@string/item_not_found"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_search_icon_search" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_16sp"
        android:alpha="0.57"
        android:fontFamily="@font/sf_pro_text"
        android:gravity="center"
        android:text="@string/try_searching_the_item_with_na_different_keyword"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_search_item_not_found" />


</androidx.constraintlayout.widget.ConstraintLayout>