<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_110dp"
    android:layout_marginHorizontal="@dimen/size_24dp"
    android:layout_marginTop="@dimen/size_16dp">

    <View
        android:id="@+id/my_cart_bg_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_110dp"
        android:background="@drawable/shape_my_cart_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/my_cart_food_image"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:src="@drawable/my_cart_item_image"
        app:layout_constraintBottom_toBottomOf="@id/my_cart_bg_view"
        app:layout_constraintStart_toStartOf="@id/my_cart_bg_view"
        app:layout_constraintTop_toTopOf="@id/my_cart_bg_view"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_cart_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_36dp"
        android:fontFamily="@font/sf_pro_rounded"
        android:text="@string/fish_with_mix_orange"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17sp"
        app:layout_constraintBottom_toTopOf="@id/my_cart_food_price"
        app:layout_constraintLeft_toRightOf="@id/my_cart_food_image"
        app:layout_constraintTop_toTopOf="@id/my_cart_bg_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_cart_food_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_rounded"
        android:text="@string/_1_900"
        android:textColor="#FA4A0C"
        android:textSize="@dimen/text_15sp"
        app:layout_constraintBottom_toBottomOf="@id/my_cart_bg_view"
        app:layout_constraintStart_toStartOf="@id/my_cart_food_name"
        app:layout_constraintTop_toBottomOf="@id/my_cart_food_name" />

    <View
        android:id="@+id/my_cart_bg_plus_minus"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="@dimen/size_25dp"
        android:background="@drawable/shape_plus_minus"
        app:layout_constraintBottom_toBottomOf="@id/my_cart_counter_text"
        app:layout_constraintStart_toStartOf="@id/my_cart_minus"
        app:layout_constraintEnd_toEndOf="@id/my_cart_plus"
        app:layout_constraintTop_toTopOf="@id/my_cart_counter_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_cart_counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_margin="@dimen/size_8dp"
        android:textColor="#EDEDED"

        android:textSize="@dimen/text_18sp"
        app:layout_constraintBottom_toBottomOf="@id/my_cart_plus"
        app:layout_constraintRight_toLeftOf="@id/my_cart_plus"
        app:layout_constraintTop_toTopOf="@id/my_cart_plus" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/my_cart_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_8dp"
        android:src="@drawable/ic_minus"
        android:layout_margin="@dimen/size_8dp"
        app:layout_constraintBottom_toBottomOf="@id/my_cart_counter_text"
        app:layout_constraintRight_toLeftOf="@id/my_cart_counter_text"
        app:layout_constraintTop_toTopOf="@id/my_cart_counter_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/my_cart_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginBottom="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@id/my_cart_bg_view"
        app:layout_constraintRight_toRightOf="@id/my_cart_bg_view"
        app:layout_constraintTop_toBottomOf="@id/my_cart_food_name" />


</androidx.constraintlayout.widget.ConstraintLayout>